# imx95-media-test

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: aarch64-linux-gnu.cmake
docs/: BOARD.md  DESIGN.md
scripts/: chunk.sh  fetch-assets.sh
src/: backend.hpp  backends_mock.cpp  config.cpp  config.hpp  main.cpp  menu.cpp  menu.hpp  neutron_convert.hpp  runner.cpp  runner.hpp  stats.hpp  term.cpp  term.hpp
src/backends/: clips.S.in  ddr_mock.cpp  ddr_pmu.cpp  embedded_clips.cpp  embedded_clips.hpp  gpu_gles.cpp  gpu_mock.cpp  neutron_convert.cpp  npu_bench.cpp  npu_mock.cpp  traffic_estimate.cpp  traffic_estimate.hpp  v4l2_m2m.cpp  v4l2_m2m.hpp  vpu_mock.cpp  vpu_v4l2.cpp
tests/: menu_walkthrough.sh
tools/: neutron-convert-on-target.cpp
